--- a/MicroRabbit/MicroRabbit.Banking.Api/MicroRabbit.Banking.Api.csproj
+++ b/MicroRabbit/MicroRabbit.Banking.Api/MicroRabbit.Banking.Api.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MicroRabbit.Infra.IoC\MicroRabbit.Infra.IoC.csproj" />
+  </ItemGroup>
+
 </Project>
