--- a/MicroRabbit/MicroRabbit.Transfer.Application/MicroRabbit.Transfer.Application.csproj
+++ b/MicroRabbit/MicroRabbit.Transfer.Application/MicroRabbit.Transfer.Application.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
