--- a/MicroRabbit/MicroRabbit.Transfer.Api/appsettings.json
+++ b/MicroRabbit/MicroRabbit.Transfer.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "TransferDbConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=TransferDB;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
